[project]
name = "pynyaa"
version = "2.0.0"
description = "Turn nyaa.si torrent pages into neat Python objects"
authors = [{ name = "Ravencentric", email = "me@ravencentric.cc" }]
readme = "README.md"
license = { file = "UNLICENSE" }
requires-python = ">=3.10"
keywords = ["anime", "nyaa", "nyaa.si", "torrent", "python"]
classifiers = [
  "License :: OSI Approved :: The Unlicense (Unlicense)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "httpx>=0.27.2",
  "lxml>=5.3",
  "pydantic>=2.9.2",
  "strenum; python_full_version<'3.11'",
  "torf>=4.2.7",
]

[project.urls]
Homepage = "https://pynyaa.ravencentric.cc"
Documentation = "https://pynyaa.ravencentric.cc"
Repository = "https://github.com/Ravencentric/pynyaa"

[tool.uv]
dev-dependencies = [
  "coverage>=7.6.1",
  "mypy>=1.11.2",
  "pytest>=8.3.3",
  "ruff>=0.6.7",
  "types-beautifulsoup4>=4.12.0.20240907",
  "typing-extensions>=4.12.2",
  "mkdocs-material>=9.5.36",
  "mkdocs-autorefs>=1.2.0",
  "mkdocstrings[python]>=0.26.1",
  "pytest-recording>=0.13.4",
  "pytest-asyncio>=1.1.0",
]

[tool.pytest.ini_options]
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
filterwarnings = [
  "error", 
  '''ignore:The 'strip_cdata' option of HTMLParser\(\) has never done anything and will eventually be removed\.:DeprecationWarning'''
]
log_cli_level = "INFO"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"


[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.mypy]
strict = true
pretty = true
files = ["src/**/*.py", "tests/**/*.py", "scripts/**/*.py"]
# enable_error_code = ["ignore-without-code"]

[[tool.mypy.overrides]]
module = ["torf"]
ignore_missing_imports = true

[tool.coverage.run]
omit = ["src/pynyaa/_version.py", "src/pynyaa/_compat.py", "tests/*"]

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:", # Only used for type-hints
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
