[project]
name = "pynyaa"
version = "2.0.0"
description = "Turn nyaa.si torrent pages into neat Python objects."
authors = [{ name = "Ravencentric", email = "me@ravencentric.cc" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["anime", "nyaa", "nyaa.si", "nyaasi", "torrent"]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = ["beautifulsoup4>=4.12.3", "httpx>=0.27.2"]

[project.urls]
Documentation = "https://ravencentric.cc/pynyaa"
Repository = "https://github.com/Ravencentric/pynyaa"

[dependency-groups]
docs = [
  "mkdocs-autorefs>=1.3.0",
  "mkdocs-material>=9.5.50",
  "mkdocstrings[python]>=0.27.0",
]
test = [
  "coverage[toml]>=7.6.10",
  "pytest>=8.3.4",
  "pytest-recording>=0.13.4",
  "pytest-asyncio>=1.1.0",
  "tomli>=2.0.1",
]
lint = [
  "mypy>=1.16.0",
  "ruff>=0.11.12",
  "types-beautifulsoup4>=4.12.0.20240907",
  "typing-extensions>=4.12.2",
]
dev = [
  { include-group = "docs" },
  { include-group = "test" },
  { include-group = "lint" },
]

[tool.pytest.ini_options]
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
filterwarnings = [
  "error",
  '''ignore:The 'strip_cdata' option of HTMLParser\(\) has never done anything and will eventually be removed\.:DeprecationWarning''',
]
log_cli_level = "INFO"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.mypy]
strict = true
pretty = true
files = ["src/**/*.py", "tests/**/*.py", "scripts/**/*.py"]
enable_error_code = ["ignore-without-code"]

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:", # Only used for type-hints
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
